--- a/test/fixtures/trips.yml
+++ b/test/fixtures/trips.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  username: MyString
-  email: MyString
-  password_digest: MyString
+  name: MyString
+  location: MyString
+  user_id: 1
 
 two:
-  username: MyString
-  email: MyString
-  password_digest: MyString
+  name: MyString
+  location: MyString
+  user_id: 1
