--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
-  location: MyString
-  user_id: 1
+  username: MyString
+  email: MyString
+  password_digest: MyString
 
 two:
-  name: MyString
-  location: MyString
-  user_id: 1
+  username: MyString
+  email: MyString
+  password_digest: MyString
